# platform.upstream.uw-imap-toolkit

./: LICENSE  Makefile.am  autogen.sh  configure.ac  dbuild.sh  libuw-imap-toolkit.manifest  project.config  uw-imap-toolkit.pc.in
common/: imap-dbglog.h
debian/: README  README.Debian  changelog  control  copyright  libuw-imap-toolkit-0.postinst  libuw-imap-toolkit-dev.install  rules
imap-2007e/: CONTENTS  Makefile  NOTICE  README  SUPPORT  makefile.nt  makefile.ntk  makefile.os2  makefile.w2k  makefile.wce
imap-2007e/c-client/: CFLAGS  LDFLAGS  Makefile  OSCFLAGS  auth_md5.c  auth_pla.c  auth_xoauth2.c  auths.c  env_unix.c  env_unix.h  imap4r1.c  imap4r1.h  linkage.c  linkage.h  lnx_inc.h  lnx_mail.c  lnx_osdep.c  mail.c  mail.h  mbx.c  memmove.c  mx.c  osdep.c  osdep.h  osdepssl.c  pop3.c  pseudo.c  rfc822.c  rfc822.h  smtp.c  ssl_unix.c  tcp_unix.c  tcp_unix.h  unix.c
imap-2007e/dmail/: dmail.c  dquota.c
imap-2007e/docs/: BUILD  CONFIG  FAQ.html  FAQ.txt  IPv6.txt  RELNOTES  SSLBUILD  Y2K  bugs.txt  calendar.txt  commndmt.txt  drivers.txt  formats.txt  imaprc.txt  internal.txt  locking.txt  md5.txt  mixfmt.txt  naming.txt
imap-2007e/docs/draft/: README
imap-2007e/docs/rfc/: README  rfc3501.txt
imap-2007e/imapd/: imapd.8  imapd.c
imap-2007e/ipopd/: ipop3d.c  ipopd.8  makefile.ntk  makefile.w2k
imap-2007e/mailutil/: mailutil.1  mailutil.c  makefile.w2k
imap-2007e/mtest/: Makefile  makefile.ntk  makefile.os2  makefile.w2k  mtest.c
imap-2007e/src/ansilib/: memmove.c  memmove2.c  memset.c  strpbrk.c  strstr.c  strtok.c  strtoul.c
imap-2007e/src/c-client/: auth_ext.c  auth_gss.c  auth_log.c  auth_md5.c  auth_pla.c  flstring.c  imap4r1.c  mail.c  mail.h  misc.c  netmsg.c  newsrc.c  nntp.c  pop3.c  rfc822.c  smanager.c  smtp.c  utf8.c  utf8aux.c
imap-2007e/src/charset/: big5.c  cns11643.c  decomtab.c  gb_12345.c  gb_2312.c  ibm.c  iso_8859.c  jis_0208.c  jis_0212.c  koi8_r.c  koi8_u.c  ksc_5601.c  tis_620.c  tmap.c  viscii.c  widths.c  windows.c
imap-2007e/src/dmail/: Makefile  dmail.1  dquota.h
imap-2007e/src/imapd/: Makefile  makefile.nt  makefile.ntk  makefile.w2k
imap-2007e/src/ipopd/: Makefile  ipop2d.c  makefile.nt
imap-2007e/src/mailutil/: Makefile  makefile.nt  makefile.ntk
imap-2007e/src/mlock/: Makefile  mlock.c
imap-2007e/src/mtest/: makefile.nt
imap-2007e/src/osdep/amiga/: Makefile  dummy.c  env_ami.c  env_ami.h  fs_ami.c  ftl_ami.c  gethstid.c  mbx.c  mh.c  mx.c  os_ami.c  os_ami.h  phile.c  pseudo.c  tcp_ami.c  tcp_ami.h  tz_bsd.c  unix.c  unix.h
imap-2007e/src/osdep/dos/: bezrkdos.c  drivraux.bat  dummydos.c  env_dos.c  env_dos.h  makefile  mkautaux.bat  mkauths.bat  mtestdbw.bat  mtestdnf.bat  mtestdnv.bat  mtestdpc.bat  mtestdwa.bat  mtestwsk.bat  mtxdos.c  os_dbw.c  os_dnf.c  os_dnf.h  os_dnv.c  os_dnv.h  os_dpc.c  os_dpc.h  os_dwa.c  os_dwa.h  os_wsk.c  os_wsk.h  tcp_dwa.c  tcp_dwa.h  tcp_wsk.c  tcp_wsk.h
imap-2007e/src/osdep/mac/: dummymac.c  env_mac.c  env_mac.h  ftl_mac.c  mtest.sit.hqx  nl_mac.c  os_mac.c  os_mac.h  osdep.h  tcp_mac.c  tcp_mac.h
imap-2007e/src/osdep/nt/: drivers.bat  drivraux.bat  dummynt.c  env_nt.c  fs_nt.c  ip4_nt.c  ip6_nt.c  kerb_mit.c  kerb_w2k.c  makefile.nt  makefile.ntk  makefile.old  makefile.w2k  nl_nt.c  os_nt.c  os_ntk.c  os_old.c  os_w2k.c  pmatch.c  setproto.bat  ssl_nt.c  ssl_old.c  ssl_w2k.c  tcp_nt.c  tenexnt.c  yunchan.c
imap-2007e/src/osdep/os2/: auths.cmd  drivers.cmd  dummyos2.c  env_os2.c  env_os2.h  makefile.os2  mbxnt.c  mtxnt.c  os_os2.c  os_os2.h  setproto.cmd  tcp_os2.c  tcp_os2.h  unixnt.c  write.c
imap-2007e/src/osdep/tops-20/: build.ctl  dummyt20.c  env_t20.c  env_t20.h  log_t20.c  os_t20.c  os_t20.h  shortsym.h  tcp_t20.c  tcp_t20.h
imap-2007e/src/osdep/unix/: Makefile  Makefile.gss  ckp_1st.c  ckp_2nd.c  ckp_3rd.c  ckp_a41.c  ckp_afs.c  ckp_bsi.c  ckp_cyg.c  ckp_dce.c  ckp_gss.c  ckp_nul.c  ckp_os4.c  ckp_pam.c  ckp_pmb.c  ckp_psx.c  ckp_sce.c  ckp_sec.c  ckp_ssn.c  ckp_std.c  ckp_sv4.c  ckp_svo.c  ckp_ult.c  crx_nfs.c  crx_std.c  drivers  env_unix.c  fdstring.c  flockcyg.c  flockcyg.h  flocklnx.c  flocksim.c  flocksim.h  fsync.c  ftl_unix.c  getspnam.c  gr_wait.c  gr_wait4.c  gr_waitp.c  ipo_unix.c  (+114 more)
imap-2007e/src/osdep/vms/: build.com  clean.com  dummyvms.c  env_vms.c  env_vms.h  link.opt  link_mnt.opt  link_nlb.opt  linkage.c  linkage.h  nl_vms.c  (+6 more)
imap-2007e/src/tmail/: tmail.1  tquota.h
imap-2007e/tmail/: Makefile  tmail.c  tquota.c
imap-2007e/tools/: Makefile  an  ua  uahelper.c
packaging/: uw-imap-toolkit.changes  uw-imap-toolkit.spec
(+8 files in other folders)
